api forza inicio

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
@@ -24,3 +25,79 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+  function loadImage(quantidade, fotossalvas, fotos, imgsusadas) {
+    var preencheu = false;
+    var ftssalvas = fotossalvas;
+    var fts = fotos;
+    var image;
+    var imagem;
+    var imgs = imgsusadas;
+
+    if(!imgs)
+      imgs = "";
+
+    const request = new XMLHttpRequest();
+    const url = 'https://forza-api.tk';
+    request.open("GET", url);
+    request.send();
+
+    request.onloadend = (e) => {
+      const myJSON = JSON.parse(request.response);
+      imagem = myJSON.image;
+
+      if (!fts.includes(imagem) && (!((quantidade + 1) == ftssalvas))) {
+        var position1 = getImagePosition(imgs);
+        imgs += position1;
+        var position2 = getImagePosition(imgs);
+        imgs += position2;
+
+        console.log(imgs)
+
+        image = document.getElementById('imagem' + ftssalvas.toString());
+        image.src = imagem;
+        image = document.getElementById('imagem' + (ftssalvas + 8).toString());
+        image.src = imagem;
+        fts += imagem;
+        ftssalvas++;
+      }
+
+      if (!((quantidade + 1) == ftssalvas))
+        loadImage(quantidade, ftssalvas, fts, imgs)
+      else {
+        for (var index = 1; index <= 16; index++) {
+          image = document.getElementById('imagem' + index.toString());
+          if (!image.src)
+            image.hidden = true
+        }
+
+
+
+      }
+    }
+  };
+
+  function getImagePosition(imgs) {
+    var achou = false;
+
+    while (!achou) {
+      var numero = Math.random() * (18 - 1) + 1;
+      if (!imgs.includes(numero.toString().substring(0, 2).replace('.','')) && numero.toString().substring(0, 2).replace('.','')< "16" )
+        achou = true;
+    }
+
+    console.log(numero.toString().substring(0, 2).replace('.',''))
+    return numero.toString().substring(0, 2).replace('.','');
+  };
+
+  function alteraImagem(id) {
+    var image = document.getElementById(id);
+    if (image.src == 'assets/icon/yugioh.jpg') {
+
+    }
+
+
+
+  };
+</script>
