finalização de alguns detalhes

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     }
     else {
       imagem.setAttribute('src', srcImagemAnimal);
-      fact.setAttribute('font', srcFactAnimal)
+      fact.innerHTML = srcFactAnimal;
     }
   }
 
